# ismdb

./: .gitignore
axum-server/: Cargo.toml
axum-server/src/entities/: author_aliases.rs  authors.rs  authors_references.rs  books.rs  feature_tags.rs  feature_tags_magazine_features.rs  magazine_features.rs  magazine_issues.rs  magazines.rs  mod.rs  photo_collections.rs  prelude.rs  publishers.rs  reference_types.rs  references.rs  series.rs  tags.rs  tags_references.rs  users.rs
rust-server/: Cargo.toml
rust-server/common/: Cargo.toml
rust-server/common/src/: enums.rs  lib.rs  string_fields.rs
rust-server/entity/src/: auth_scopes.rs  author.rs  author_alias.rs  author_aliases.rs  authors.rs  authors_references.rs  book.rs  books.rs  feature_tag.rs  feature_tags.rs  feature_tags_magazine_features.rs  lib.rs  magazine.rs  magazine_feature.rs  magazine_features.rs  magazine_issues.rs  magazines.rs  photo_collections.rs  prelude.rs  publishers.rs  reference.rs  reference_type.rs  reference_types.rs  references.rs  series.rs  tag.rs  tags.rs  tags_references.rs  user.rs  users.rs  users_auth_scopes.rs
rust-server/migration/: Cargo.toml
rust-server/migration/src/: lib.rs  m20230102_102224_create_reference_type.rs  m20230102_102241_create_reference.rs  m20230102_102407_create_photo_collection.rs  m20230102_102414_create_publisher.rs  m20230102_102422_create_series.rs  m20230102_102426_create_book.rs  m20230102_102430_create_magazine.rs  m20230102_102442_create_magazine_issue.rs  m20230102_102470_create_magazine_feature.rs  m20230102_102504_create_author.rs  m20230102_102512_create_author_alias.rs  m20230102_102523_create_tag.rs  m20230102_102533_create_feature_tag.rs  m20230102_102547_create_user.rs  m20230102_102607_create_auth_scope.rs  m20230102_102620_create_users_auth_scopes.rs  m20230102_102641_create_authors_references.rs  m20230102_102719_index_authors_references.rs  m20230102_102738_create_tags_references.rs  m20230102_102749_index_tags_references.rs  m20230102_103129_create_feature_tags_magazine_features.rs  m20230102_103228_index_feature_tags_magazine_features.rs  m20230106_200124_seed_reference_types.rs  m20230106_212422_seed_feature_tags.rs  m20230106_213118_seed_initial_tags.rs
rust-server/src/: cli_parser.rs  main.rs
rust-server/src/entity/: Cargo.toml  auth_scope.rs  magazine_issue.rs  mod.rs
rust-server/src/entity/src/: feature_tags_magazine_features.rs  photo_collection.rs  publisher.rs
rust-server/src/migration/: m20230102_102422_create_series.rs  m20230102_102719_index_authors_references.rs  m20230102_102738_create_tags_references.rs  m20230102_103228_index_feature_tags_magazine_features.rs  m20230107_115414_seed_auth_scopes.rs
rust-server/src/migration/src/: m20230102_102414_create_publisher.rs  m20230102_102430_create_magazine.rs  (+5 more)
rust-server/util/: import_refs.pl  series.yaml
(+395 files in other folders)
