[package]
name = "ismdb"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.1", features = ["http2", "macros"] }
sea-orm = { version = "0.10.6", features = ["runtime-tokio-rustls", "sqlx-sqlite", "macros"] }
sea-orm-migration = { version = "0.10.6", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
tokio = { version = "1.23.1", features = ["full"] }
dotenvy = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1.1", features = ["derive", "env"] }
