[package]
name = "ismdb"
version = "0.1.0"
authors = ["Randy J. Ray <rjray@blackperl.com>"]
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.6.1", features = ["http2", "macros"] }
sea-orm = { version = "0.10.6", features = ["runtime-tokio-rustls", "sqlx-sqlite", "macros"] }
sea-orm-migration = { version = "0.10.6", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
tokio = { version = "1.23.1", features = ["full"] }
dotenvy = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1.1", features = ["env", "cargo"] }
